{
  "version": 4,
  "terraform_version": "1.15.6",
  "serial": 119,
  "lineage": "21b7d10c-a095-46d1-333d-7f2272be6565",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d54f338754ebc55e",
            "arn": "arn:aws:ec2:us-east-1:250368537583:elastic-ip/eipalloc-0d54f338754ebc55e",
            "association_id": "eipassoc-0fb16511b522b7577",
            "domain": "vpc",
            "id": "eipalloc-0d54f338754ebc55e",
            "network_border_group": "us-east-1",
            "network_interface": "eni-08131c5b2c5d5b861",
            "private_dns": "ip-10-0-4-153.ec2.internal",
            "private_ip": "10.0.4.153",
            "public_dns": "ec2-54-144-130-157.compute-1.amazonaws.com",
            "public_ip": "54.144.130.157",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eks-lab-nat-eip"
            },
            "tags_all": {
              "Name": "eks-lab-nat-eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:250368537583:internet-gateway/igw-090b44e18d961e0e0",
            "id": "igw-090b44e18d961e0e0",
            "owner_id": "250368537583",
            "tags": {
              "Name": "eks-lab-igw"
            },
            "tags_all": {
              "Name": "eks-lab-igw"
            },
            "vpc_id": "vpc-0bbff62cf66726414"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d54f338754ebc55e",
            "association_id": "eipassoc-0fb16511b522b7577",
            "connectivity_type": "public",
            "id": "nat-091fe0fb620ac549e",
            "network_interface_id": "eni-08131c5b2c5d5b861",
            "private_ip": "10.0.4.153",
            "public_ip": "54.144.130.157",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-00d16c64c87b1354a",
            "tags": {
              "Name": "eks-lab-nat"
            },
            "tags_all": {
              "Name": "eks-lab-nat"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:250368537583:route-table/rtb-09fce889ad0b2bf42",
            "id": "rtb-09fce889ad0b2bf42",
            "owner_id": "250368537583",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-091fe0fb620ac549e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "eks-lab-private-rt"
            },
            "tags_all": {
              "Name": "eks-lab-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bbff62cf66726414"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:250368537583:route-table/rtb-0cb858a3ab7e50851",
            "id": "rtb-0cb858a3ab7e50851",
            "owner_id": "250368537583",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-090b44e18d961e0e0",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "eks-lab-public-rt"
            },
            "tags_all": {
              "Name": "eks-lab-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bbff62cf66726414"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0abb7a0529db55ae9",
            "route_table_id": "rtb-09fce889ad0b2bf42",
            "subnet_id": "subnet-01f7b852e379f0da4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private_1",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e936171057c59d13",
            "route_table_id": "rtb-09fce889ad0b2bf42",
            "subnet_id": "subnet-087175994204d3cdb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private_2",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0410aa1530347e5ce",
            "route_table_id": "rtb-0cb858a3ab7e50851",
            "subnet_id": "subnet-00d16c64c87b1354a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01119afcda142b0d7",
            "route_table_id": "rtb-0cb858a3ab7e50851",
            "subnet_id": "subnet-0de4506e178823a25"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:250368537583:security-group/sg-07d207c8c1d493594",
            "description": "EKS Cluster Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07d207c8c1d493594",
            "ingress": [],
            "name": "eks-lab-cluster-sg",
            "name_prefix": "",
            "owner_id": "250368537583",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-lab-cluster-sg"
            },
            "tags_all": {
              "Name": "eks-lab-cluster-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bbff62cf66726414"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:250368537583:security-group/sg-0d0e50fd043658a04",
            "description": "EKS Nodes Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d0e50fd043658a04",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-07d207c8c1d493594"
                ],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "eks-lab-nodes-sg",
            "name_prefix": "",
            "owner_id": "250368537583",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-lab-nodes-sg"
            },
            "tags_all": {
              "Name": "eks-lab-nodes-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bbff62cf66726414"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.eks_cluster",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:250368537583:subnet/subnet-01f7b852e379f0da4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01f7b852e379f0da4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "250368537583",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-lab-private-1",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "eks-lab-private-1",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0bbff62cf66726414"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:250368537583:subnet/subnet-087175994204d3cdb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-087175994204d3cdb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "250368537583",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-lab-private-2",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "eks-lab-private-2",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0bbff62cf66726414"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:250368537583:subnet/subnet-00d16c64c87b1354a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00d16c64c87b1354a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "250368537583",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-lab-public-1",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "eks-lab-public-1",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0bbff62cf66726414"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:250368537583:subnet/subnet-0de4506e178823a25",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0de4506e178823a25",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "250368537583",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-lab-public-2",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "eks-lab-public-2",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0bbff62cf66726414"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:250368537583:vpc/vpc-0bbff62cf66726414",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-062df6457b8227e88",
            "default_route_table_id": "rtb-041c92020d44e6baf",
            "default_security_group_id": "sg-0abfeb3c7656065f8",
            "dhcp_options_id": "dopt-0be69b7cb30ba54c0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0bbff62cf66726414",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-041c92020d44e6baf",
            "owner_id": "250368537583",
            "tags": {
              "Name": "eks-lab-vpc"
            },
            "tags_all": {
              "Name": "eks-lab-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}